--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,8 @@ buildNumber.properties
 !/.mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.gitignore.io/api/maven,intellij,intellij+iml,intellij+all
+
+### VS Code IDE
+*.project
+*.settings*
+*.classpath
